Add flashcards to individual deck pages

--- a/adicards/templates/deck.html
+++ b/adicards/templates/deck.html
@@ -3,4 +3,10 @@
 {% block content %}
     <h1>{{ deck.name }}</h1>
     <h4>Created on: {{ deck.date_created }}</h4>
+    {% for flashcard in flashcard_set %}
+        <h5>
+            {{ flashcard.prompt }}
+            {{ flashcard.answer }}
+        </h5>
+    {% endfor %}
 {% endblock %}
