--- a/adicards/templates/header.html
+++ b/adicards/templates/header.html
@@ -10,6 +10,7 @@
   </head>
   <body>
 	<div id="content">
+        <h1 align="center">AdiCards</h1>
 	   {% block content %}
 	   {% endblock %}
 	</div>
