--- a/adicards/templates/deck_show.html
+++ b/adicards/templates/deck_show.html
@@ -5,7 +5,8 @@
     <h4>Created on: {{ deck.date_created }}</h4>
     {% for flashcard in flashcards %}
         <h5>
-            {{ flashcard.prompt }}
+            {{ flashcard.url_prompt }}
+            {{ flashcard.text_prompt }}
             {{ flashcard.answer }}
         </h5>
     {% endfor %}
