--- a/adicards/templates/deck_show.html
+++ b/adicards/templates/deck_show.html
@@ -4,10 +4,25 @@
     <h1>{{ deck.name }}</h1>
     <h4>Created on: {{ deck.date_created }}</h4>
     {% for flashcard in flashcards %}
-        <h5>
-            {{ flashcard.url_prompt }}
-            {{ flashcard.text_prompt }}
-            {{ flashcard.answer }}
-        </h5>
+
+<div class="card mb-3">
+    <img class="card-img-top" src="{{ flashcard.url_prompt }}" alt="Card image cap">
+
+    <div class="card-body">
+        <h5 class="card-title">{{ flashcard.text_prompt }}</h5>
+
+        <a class="btn btn-primary" data-toggle="collapse" href="#{{ flashcard.id }}" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Answer
+        </a>
+
+        <div class="collapse" id="{{ flashcard.id }}">
+            <div class="card card-body">
+                {{ flashcard.answer }}
+            </div>
+        </div>
+  </div>
+</div>
+
+
     {% endfor %}
 {% endblock %}
