--- a/adicards/templates/deck_list.html
+++ b/adicards/templates/deck_list.html
@@ -1,13 +1,17 @@
 {% extends "header.html" %}
 
 {% block content %}
-    <h1 align="center">Decks:</h1>
-    {% for deck in object_list %}
+    <div class="text-center">
+        <h1 class="mt-5">Decks:</h1>
+        {% for deck in object_list %}
         <h5>
-            {{ deck.date_created|date:"Y-m-d" }}
+            <small>
+                #{{ deck.id }}
+            </small>
             <a href="/adicards/decks/{{ deck.id }}">
                 {{ deck.name }}
             </a>
         </h5>
-    {% endfor %}
+        {% endfor %}
+    </div>
 {% endblock %}
