--- a/adicards/templates/deck_show.html
+++ b/adicards/templates/deck_show.html
@@ -1,26 +1,27 @@
 {% extends "header.html" %}
 
 {% block content %}
-    <h1 class="text-center mt-5">{{ deck.name }}</h1>
-    <h6 class="text-center">
-        Created on: {{ deck.date_created }}
-    </h6>
+<h1 class="text-center mt-5">{{ deck.name }}</h1>
+<h6 class="text-center">
+    Created on: {{ deck.date_created }}
+</h6>
 
-    <hr>
+<hr>
 
-    {% for flashcard in flashcards %}
-        <div class="card text-center flashcard mt-5">
-            <h5 class="card-header bg-dark text-white">{{ flashcard.text_prompt }}</h5>
+{% for flashcard in flashcards %}
+<div class="card text-center mt-5">
+    <h5 class="card-header bg-dark text-white">{{ flashcard.text_prompt }}</h5>
 
-            <div class="card-body">
-                <a class="card-title btn btn-primary" data-toggle="collapse" href="#{{ flashcard.id }}" role="button" aria-expanded="false" aria-controls="collapseExample">
-                    Answer
-                </a>
+    <div class="card-body">
+        <a class="card-title btn btn-primary" data-toggle="collapse" href="#{{ flashcard.id }}" role="button"
+           aria-expanded="false" aria-controls="collapseExample">
+            Answer
+        </a>
 
-                <div class="answer card-text collapse" id="{{ flashcard.id }}">
-                    {{ flashcard.answer }}
-                </div>
-            </div>
+        <div class="answer card-text collapse" id="{{ flashcard.id }}">
+            {{ flashcard.answer }}
         </div>
-    {% endfor %}
+    </div>
+</div>
+{% endfor %}
 {% endblock %}
