--- a/adicards/templates/flashcard_create.html
+++ b/adicards/templates/flashcard_create.html
@@ -1,7 +1,7 @@
 {% extends "header.html" %}
 
 {% block content %}
-<form action="/adicards/create/flashcard/" method="post">
+<form action="/create/flashcard/" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit"/>
