--- a/adicards/templates/header.html
+++ b/adicards/templates/header.html
@@ -13,7 +13,7 @@
 <body>
 <div id="content">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/adicards/">AdiCards</a>
+        <a class="navbar-brand" href="/">AdiCards</a>
 
         <!-- Navbar Toggle for smaller screens -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/adicards/decks/">Decks</a>
+                    <a class="nav-link" href="/decks/">Decks</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -34,8 +34,8 @@
                         Create
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/adicards/create/deck/">Deck</a>
-                        <a class="dropdown-item" href="/adicards/create/flashcard/">Flashcard</a>
+                        <a class="dropdown-item" href="/create/deck/">Deck</a>
+                        <a class="dropdown-item" href="/create/flashcard/">Flashcard</a>
                     </div>
                 </li>
 
