Remove /adicards/ to make url paths dynamic

--- a/adicards/templates/deck_list.html
+++ b/adicards/templates/deck_list.html
@@ -8,7 +8,7 @@
         <small>
             #{{ deck.id }}
         </small>
-        <a href="/adicards/decks/{{ deck.id }}">
+        <a href="/decks/{{ deck.id }}">
             {{ deck.name }}
         </a>
     </h5>
