Rebrand to "LeetCards"

--- a/leetcards/templates/header.html
+++ b/leetcards/templates/header.html
@@ -13,7 +13,7 @@
 <body>
 <div id="content">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">AdiCards</a>
+        <a class="navbar-brand" href="/">LeetCards</a>
 
         <!-- Navbar Toggle for smaller screens -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
