--- a/leetcards/templates/index.html
+++ b/leetcards/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="mt-5 text-center" id="hero">
-    <h1>Welcome to AdiCards</h1>
+    <h1>Welcome to LeetCards</h1>
     <h6>A flashcard webapp made by Tejas</h6>
 </div>
 {% endblock %}
